cargo-features = ["profile-rustflags"]

[package]
name = "LilDBsh"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
crossterm = "0.29.0"
tonic = "0.13.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
prost = "0.13.5"
reqwest = "0.12.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.13.0"

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
codegen-units = 1
lto = "off"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1
