[package]
name = "LilDBsh"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
reedline = "0.44.0"
tonic = {version = "0.14.2", features=["tls-ring", "tls-native-roots"]}
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
prost = "0.14.3"
reqwest = "0.13.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tonic-prost = "0.14.2"
anyhow = "1.0.100"
rustls = "0.23.36"
tracy-client = { version = "0.18.4", optional = true }
directories = "6.0.0"

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }

[profile.dev]
opt-level = 0
debug = 2
overflow-checks = true
codegen-units = 1
lto = "off"

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
codegen-units = 1

[profile.release.build-override]
opt-level = 3
debug = false
codegen-units = 1

[features]
tracy = ["dep:tracy-client"]
